# edumeet-recorder

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
scripts/: Dockerfile  entrypoint.sh  install-dependencies  install.sh  pulseaudio.patch  wpe.patch
src/: CMakeLists.txt
src/App/: CMakeLists.txt  config.json  main.cpp
src/Common/: CMakeLists.txt
src/Common/Config/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h
src/Common/Config/tests/: CMakeLists.txt  test_config.cpp
src/Common/Pipeline/: CMakeLists.txt  Pipeline.cpp  Pipeline.h
src/Common/Pipeline/tests/: CMakeLists.txt  test_Pipeline.cpp
src/Common/Recorder/: CMakeLists.txt  IRecorder.cpp  IRecorder.h  RecordManager.cpp  RecordManager.h  Recorder.cpp  Recorder.h  RtpRecorder.cpp  RtpRecorder.h  UriRecorder.cpp  UriRecorder.h
src/Common/Recorder/tests/: CMakeLists.txt  test_Recorder.cpp  test_htmlRecorder.cpp  test_rtpRecorder.cpp
src/Common/Rest/: CMakeLists.txt  Messages.h  Service.cpp  Service.h
src/TestingBase/: CMakeLists.txt  main.cpp  test_config.json
